# NormalToHeight

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: helpful_functions.cmake  platform_defines.hpp.in
code/: height_to_normal.cpp  height_to_normal.hpp  image.cpp  image.hpp  image_load.cpp  image_save.cpp  main.cpp  normal_to_height.cpp  normal_to_height.hpp  normal_to_height_experimental.cpp  normal_to_height_experimental.hpp  sandbox_main.cpp
code/shared/: assert.hpp  core_defines.hpp  filesystem.cpp  filesystem.hpp  float_conversions.hpp  logger.cpp  logger.hpp  math.hpp  math_base.hpp  math_matrix.cpp  math_matrix.hpp  math_vec.cpp  math_vec.hpp  time.cpp  time.hpp
